# AraT5-MSAizer

./: .gitignore  README.md  finetune.py  pyproject.toml
configs/: t5_gold_synthetic.json
data-prep/: north_lev_parallel_corpus.py  padic.py  translate_opus_to_dialect.py
